--- a/client/angular.json
+++ b/client/angular.json
@@ -33,8 +33,7 @@
               }
             ],
             "styles": [
-              "src/theme/variables.scss",
-              "src/global.scss"
+              "src/styles.scss"
             ],
             "scripts": [],
             "browser": "src/main.ts"
