Refactor/fixes/PB service improvements. Workout creation from program. Home: program progress, copy. Program: week/day progress tags. Hook for validation so only 1 workout may be active. Continue footer w timer badge.

--- a/client/package.json
+++ b/client/package.json
@@ -1,6 +1,6 @@
 {
-    "name": "photo-gallery",
-    "version": "0.0.1",
+    "name": "gym-app",
+    "version": "1.0.0",
     "author": "Ionic Framework",
     "homepage": "https://ionicframework.com/",
     "scripts": {
