--- a/client/tsconfig.json
+++ b/client/tsconfig.json
@@ -5,7 +5,7 @@
         "baseUrl": "./",
         "outDir": "./dist/out-tsc",
         "forceConsistentCasingInFileNames": true,
-        //"strict": true, // TODO
+        "strict": false, // TODO
         "noImplicitOverride": true,
         "noPropertyAccessFromIndexSignature": true,
         "noImplicitReturns": true,
@@ -17,7 +17,7 @@
         "moduleResolution": "node",
         "importHelpers": true,
         "target": "es2022",
-        "module": "es2020",
+        "module": "es2022",
         "lib": [
             "es2019",
             "dom"
