--- a/docker/dockerfile.web
+++ b/docker/dockerfile.web
@@ -2,7 +2,7 @@ FROM node:22.13 AS angular-builder
 
 WORKDIR /app
 
-COPY . .
+COPY ../client .
 
 RUN npm install --silent --force
 RUN npm install -g @angular/cli
