--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -8,7 +8,7 @@ services:
     ports:
       - "80:80"
 
-  eenvo-api:
+  rypm-api:
     image: ivucicev/rypm-api:latest
     volumes:
       - ./pb_data:/pb/pb_data
