--- a/docker/dockerfile.web
+++ b/docker/dockerfile.web
@@ -18,7 +18,7 @@ COPY ./nginx.conf /etc/nginx/conf.d/default.conf
 
 EXPOSE 80
 
-COPY entrypoint-web.sh /entrypoint.sh
+COPY ../docker/entrypoint-web.sh /entrypoint.sh
 RUN chmod +x /entrypoint.sh
 
 CMD ["/entrypoint.sh"]
