--- a/docker/dockerfile.web
+++ b/docker/dockerfile.web
@@ -14,7 +14,7 @@ COPY --from=angular-builder /app/dist/rypm-app/browser /usr/share/nginx/html
 
 COPY --from=angular-builder /app/.well-known /usr/share/nginx/html/.well-known
 
-COPY ./nginx.conf /etc/nginx/conf.d/default.conf
+COPY ../docker/nginx.conf /etc/nginx/conf.d/default.conf
 
 EXPOSE 80
 
