--- a/docker/dockerfile.web
+++ b/docker/dockerfile.web
@@ -10,9 +10,9 @@ RUN ng build --configuration production
 
 FROM nginx:alpine
 
-COPY --from=angular-builder /app/dist/rypm-app/browser /usr/share/nginx/html
+COPY --from=angular-builder /app/www/browser /usr/share/nginx/html
 
-COPY --from=angular-builder /app/.well-known /usr/share/nginx/html/.well-known
+#COPY --from=angular-builder /app/.well-known /usr/share/nginx/html/.well-known
 
 COPY ../docker/nginx.conf /etc/nginx/conf.d/default.conf
 
