--- a/docker/dockerfile.api
+++ b/docker/dockerfile.api
@@ -12,7 +12,7 @@ RUN unzip /tmp/pb.zip -d /pb/
 
 COPY ../server/pb_migrations /pb/pb_migrations
 COPY ../server/pb_hooks /pb/pb_hooks
-COPY ./data-import /pb/pb_data
+COPY ../data-import /pb/pb_data
 
 FROM alpine:latest
 
