--- a/client/angular.json
+++ b/client/angular.json
@@ -30,6 +30,11 @@
                                 "glob": "**/*",
                                 "input": "src/assets",
                                 "output": "assets"
+                            },
+                            {
+                                "glob": "**/*",
+                                "input": "public",
+                                "output": "/"
                             }
                         ],
                         "styles": [
@@ -59,7 +64,8 @@
                                     "with": "src/environments/environment.prod.ts"
                                 }
                             ],
-                            "outputHashing": "all"
+                            "outputHashing": "all",
+                            "serviceWorker": "ngsw-config.json"
                         },
                         "development": {
                             "optimization": false,
