--- a/docker/nginx.conf
+++ b/docker/nginx.conf
@@ -74,7 +74,7 @@ server {
     }
 
     location /api/ {
-        proxy_pass http://127.0.0.1:8080/api/;
+        proxy_pass http://api:8080/api/;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
@@ -89,7 +89,7 @@ server {
     }
 
     location /_/ {
-        proxy_pass http://127.0.0.1:8080/_/;
+        proxy_pass http://api:8080/_/;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
@@ -104,7 +104,7 @@ server {
     }
 
     location /system/ {
-        proxy_pass http://127.0.0.1:8080/_/;
+        proxy_pass http://api:8080/_/;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
@@ -131,7 +131,7 @@ server {
     }
 
     location /api/ {
-        proxy_pass http://127.0.0.1:8090/api/;
+        proxy_pass http://api:8090/api/;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
@@ -146,7 +146,7 @@ server {
     }
 
     location /system/ {
-        proxy_pass http://127.0.0.1:8090/_/;
+        proxy_pass http://api:8090/_/;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
