--- a/docker/nginx.conf
+++ b/docker/nginx.conf
@@ -2,7 +2,7 @@ server {
     listen 80;
     server_name app.rypm.app www.app.rypm.app;
 
-    location /api/ {
+    location ^~ /api/ {
         proxy_pass http://api:8080/api/;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
