--- a/docker/nginx.conf
+++ b/docker/nginx.conf
@@ -17,7 +17,7 @@ server {
         proxy_pass_request_headers on;
     }
 
-    location /_/ {
+    location ^~ /_/ {
         proxy_pass http://api:8080/_/;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
@@ -32,7 +32,7 @@ server {
         proxy_pass_request_headers on;
     }
 
-    location /system/ {
+    location ^~ /system/ {
         proxy_pass http://api:8080/_/;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
