--- a/docker/nginx.conf
+++ b/docker/nginx.conf
@@ -1,13 +1,25 @@
 server {
     listen 80;
     server_name app.rypm.app www.app.rypm.app;
+    return 301 https://$host$request_uri;
+}
+
+server {
+    listen 443 ssl;
+    server_name app.rypm.app www.app.rypm.app;
+
+    ssl_certificate /etc/letsencrypt/live/rypm.app/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/rypm.app/privkey.pem;
+
+    ssl_protocols TLSv1.2 TLSv1.3;
+    ssl_prefer_server_ciphers on;
 
     location ^~ /api/ {
         proxy_pass http://api:8080/api/;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header X-Forwarded-Proto $scheme;
+        proxy_set_header X-Forwarded-Proto https;
 
         client_max_body_size 10M;
 
@@ -22,7 +34,7 @@ server {
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header X-Forwarded-Proto $scheme;
+        proxy_set_header X-Forwarded-Proto https;
 
         client_max_body_size 100M;
 
@@ -37,7 +49,7 @@ server {
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header X-Forwarded-Proto $scheme;
+        proxy_set_header X-Forwarded-Proto https;
 
         client_max_body_size 100M;
 
@@ -52,5 +64,4 @@ server {
         index index.html;
         try_files $uri /index.html;
     }
-
 }
