--- a/docker/nginx.conf
+++ b/docker/nginx.conf
@@ -80,7 +80,7 @@ server {
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
         add_header 'Access-Control-Allow-Origin' '*' always;
-        add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS';
+        add_header 'Access-Control-Allow-Methods' 'GET, POST, PATCH, DELETE, OPTIONS';
         add_header 'Access-Control-Allow-Headers' 'Origin, Content-Type, Accept, Authorization';
         add_header 'Access-Control-Allow-Credentials' 'true';
 
@@ -102,6 +102,14 @@ server {
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
+        add_header 'Access-Control-Allow-Origin' '*' always;
+        add_header 'Access-Control-Allow-Methods' 'GET, POST, PATCH, DELETE, OPTIONS';
+        add_header 'Access-Control-Allow-Headers' 'Origin, Content-Type, Accept, Authorization';
+        add_header 'Access-Control-Allow-Credentials' 'true';
+
+        if ($request_method = 'OPTIONS') {
+            return 204;
+        }
 
         client_max_body_size 100M;
 
@@ -117,6 +125,14 @@ server {
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
+        add_header 'Access-Control-Allow-Origin' '*' always;
+        add_header 'Access-Control-Allow-Methods' 'GET, POST, PATCH, DELETE, OPTIONS';
+        add_header 'Access-Control-Allow-Headers' 'Origin, Content-Type, Accept, Authorization';
+        add_header 'Access-Control-Allow-Credentials' 'true';
+
+        if ($request_method = 'OPTIONS') {
+            return 204;
+        }
 
         client_max_body_size 100M;
 
