--- a/client/package.json
+++ b/client/package.json
@@ -29,12 +29,14 @@
         "@capacitor/preferences": "^7.0.1",
         "@capacitor/splash-screen": "^7.0.1",
         "@capacitor/status-bar": "7.0.1",
+        "@date-fns/tz": "^1.3.1",
         "@ionic/angular": "^8.0.0",
         "@ionic/pwa-elements": "^3.3.0",
         "@ngx-translate/core": "^16.0.4",
         "@ngx-translate/http-loader": "^16.0.1",
         "animate.css": "^4.1.1",
         "chart.js": "^2.9.4",
+        "date-fns": "^4.1.0",
         "ionicons": "^8.0.13",
         "ng-circle-progress": "^1.7.1",
         "ng-circle-progress-day-countdown": "^0.16.1",
