--- a/client/package.json
+++ b/client/package.json
@@ -38,6 +38,7 @@
         "chart.js": "^2.9.4",
         "date-fns": "^4.1.0",
         "ionicons": "^8.0.13",
+        "marked": "^16.1.2",
         "ng-circle-progress": "^1.7.1",
         "ng-circle-progress-day-countdown": "^0.16.1",
         "pocketbase": "^0.25.1",
