--- a/client/package.json
+++ b/client/package.json
@@ -23,7 +23,9 @@
         "@angular/router": "^19.0.0",
         "@angular/service-worker": "^19.0.0",
         "@capacitor/app": "7.0.1",
+        "@capacitor/camera": "^7.0.2",
         "@capacitor/core": "7.3.0",
+        "@capacitor/filesystem": "^7.1.4",
         "@capacitor/haptics": "7.0.1",
         "@capacitor/keyboard": "7.0.1",
         "@capacitor/preferences": "^7.0.1",
