fix service worker sorcery [ci]

--- a/client/angular.json
+++ b/client/angular.json
@@ -45,6 +45,8 @@
                     },
                     "configurations": {
                         "production": {
+                            "baseHref": "/app/", 
+                            "deployUrl": "/app/",
                             "optimization": true,
                             "budgets": [
                                 {
