--- a/client/ngsw-config.json
+++ b/client/ngsw-config.json
@@ -1,6 +1,6 @@
 {
 	"$schema": "./node_modules/@angular/service-worker/config/schema.json",
-	"index": "/index.html",
+	"index": "index.html",
 	"assetGroups": [
 		{
 			"name": "RYPM.",
@@ -8,9 +8,9 @@
 			"resources": {
 				"files": [
 					"assets/icons/favicon.ico",
-					"/index.csr.html",
-					"/index.html",
-					"/manifest.webmanifest",
+					"index.csr.html",
+					"index.html",
+					"manifest.webmanifest",
 					"/*.css",
 					"/*.js"
 				]
