--- a/docker/nginx.conf
+++ b/docker/nginx.conf
@@ -2,10 +2,12 @@ server {
     listen 80;
     server_name app.rypm.app www.app.rypm.app;
 
+    location = /app { return 301 /app/; }
+
+    # SPA scope (place BEFORE any generic `location / { ... }`)
     location ^~ /app/ {
         root /usr/share/nginx/html;
-        index index.html;
-        try_files $uri /app/index.html;
+        try_files $uri $uri/ /app/index.html;
     }
 
     location /api/ {
