--- a/docker/nginx.conf
+++ b/docker/nginx.conf
@@ -4,10 +4,9 @@ server {
 
     location = /app { return 301 /app/; }
 
-    # SPA scope (place BEFORE any generic `location / { ... }`)
     location ^~ /app/ {
         root /usr/share/nginx/html;
-        try_files $uri $uri/ /app/index.html;
+        try_files $uri $uri/ /index.html;
     }
 
     location /api/ {
