--- a/docker/dockerfile.web
+++ b/docker/dockerfile.web
@@ -10,7 +10,7 @@ RUN ng build --configuration production
 
 FROM nginx:alpine
 
-COPY --from=angular-builder /app/www/browser /usr/share/nginx/html/app
+COPY --from=angular-builder /app/www/browser /usr/share/nginx/html
 
 COPY ../docker/nginx.conf /etc/nginx/conf.d/default.conf
 
