--- a/docker/nginx.conf
+++ b/docker/nginx.conf
@@ -2,11 +2,10 @@ server {
     listen 80;
     server_name app.rypm.app www.app.rypm.app;
 
-    location = /app { return 301 /app/; }
-
-    location ^~ /app/ {
+    location / {
         root /usr/share/nginx/html;
-        try_files $uri $uri/ /index.html;
+        index index.html;
+        try_files $uri /index.html;
     }
 
     location /api/ {
