--- a/client/ngsw-config.json
+++ b/client/ngsw-config.json
@@ -1,6 +1,12 @@
 {
 	"$schema": "./node_modules/@angular/service-worker/config/schema.json",
 	"index": "index.html",
+	"navigationUrls": [
+		"/**",
+		"!/api/**",
+		"!/_/**",
+		"!/system/**"
+	],
 	"assetGroups": [
 		{
 			"name": "RYPM.",
