feat pwa push sender [ci]

--- a/functions/project.yml
+++ b/functions/project.yml
@@ -3,5 +3,15 @@ packages:
     functions:
       - name: rypm-notifier
         runtime: nodejs:18
+        environment:
+          VAPID_SUBJECT: mailto:ivucicev@gmail.com
+          VAPID_PUBLIC_KEY: "${VAPID_PUBLIC_KEY}"
+          VAPID_PRIVATE_KEY: "${VAPID_PRIVATE_KEY}"
+          PST_SECRET: "${PST_SECRET}"
       - name: rypm-sender
         runtime: nodejs:18
+        environment:
+          VAPID_SUBJECT: mailto:ivucicev@gmail.com
+          VAPID_PUBLIC_KEY: "${VAPID_PUBLIC_KEY}"
+          VAPID_PRIVATE_KEY: "${VAPID_PRIVATE_KEY}"
+          PST_SECRET: "${PST_SECRET}"
