--- a/functions/packages/rypm-notifier/rypm-notifier/package.json
+++ b/functions/packages/rypm-notifier/rypm-notifier/package.json
@@ -1,6 +1,7 @@
 {
     "dependencies": {
-        "crypto": "^1.0.1"
+        "crypto": "^1.0.1",
+        "web-push": "^3.6.7"
     },
     "type": "module"
 }
