--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
         "test": "ng test",
         "server": "cd ./server && PB_CORS_ALLOWED_ORIGINS=* && ./pocketbase serve --http 0.0.0.0:8080 --dev",
         "client": "cd ./client && ng serve --port 4000",
-        "serve": "npm run server & npm run client"
+        "serve": "npm run server & npm run client",
+        "deploy-do": "cd ./functions && doctl serverless deploy . --env .env"
     }
 }
