--- a/docker/dockerfile.api
+++ b/docker/dockerfile.api
@@ -1,6 +1,6 @@
 FROM alpine:latest AS pocketbase-builder
 
-ARG PB_VERSION=0.29.0
+ARG PB_VERSION=0.29.2
 
 RUN apk add --no-cache \
     unzip \
@@ -23,7 +23,7 @@ RUN apk add --no-cache ca-certificates
 RUN apk add --no-cache curl dcron
 
 COPY --from=pocketbase-builder /pb /pb
-COPY crontab /etc/crontabs/root
+COPY --from=pocketbase-builder crontab /etc/crontabs/root
 
 WORKDIR /pb
 
