fix dockerbuild 2 [ci]

--- a/docker/dockerfile.api
+++ b/docker/dockerfile.api
@@ -15,7 +15,6 @@ COPY ../server/pb_hooks /pb/pb_hooks
 COPY ../data-import/exercise-templates.json /pb/pb_import/exercise-templates.json
 COPY ../data-import/exercise-templates.json /pb/pb_data/pb_import/exercise-templates.json
 COPY ../data-import/exercise-templates.json /pb/pb_data/exercise-templates.json
-COPY crontab /
 
 FROM alpine:latest
 
@@ -23,7 +22,7 @@ RUN apk add --no-cache ca-certificates
 RUN apk add --no-cache curl dcron
 
 COPY --from=pocketbase-builder /pb /pb
-COPY --from=pocketbase-builder crontab /etc/crontabs/root
+COPY crontab /etc/crontabs/root
 
 WORKDIR /pb
 
