fix env variables && docker compose [ci]

--- a/docker/.env
+++ b/docker/.env
@@ -2,3 +2,5 @@ POCKETBASE_ADMIN_EMAIL=admin@admin.com
 POCKETBASE_ADMIN_PASS=admin123
 API_URL=http://0.0.0.0:8080/
 OPENAI_API_KEY=
+PUSH_SEND_URL=
+PUSH_SUBSCRIBE_URL=
