feat expose source maps for easier debuggging with sentry

--- a/client/angular.json
+++ b/client/angular.json
@@ -51,6 +51,11 @@
                     "configurations": {
                         "production": {
                             "optimization": true,
+                            "sourceMap": {
+                                "scripts": true,
+                                "hidden": false,
+                                "styles": false
+                            },
                             "budgets": [
                                 {
                                     "type": "initial",
