--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -46,31 +46,31 @@ jobs:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
       
-      - name: Build and push Web App Docker image
-        if: contains(github.event.head_commit.message, 'ci')
-        id: push-webapp
-        uses: docker/build-push-action@3b5e8027fcad23fda98b2e3ac259d8d67585f671
-        with:
-          context: .
-          file: ./docker/dockerfile.web
-          push: true
-          tags: |
-            ivucicev/rypm-app:latest
-            ivucicev/rypm-app:${{ github.run_id }}
-          labels: ${{ steps.meta.outputs.labels }}
+    #   - name: Build and push Web App Docker image
+    #     if: contains(github.event.head_commit.message, 'ci')
+    #     id: push-webapp
+    #     uses: docker/build-push-action@3b5e8027fcad23fda98b2e3ac259d8d67585f671
+    #     with:
+    #       context: .
+    #       file: ./docker/dockerfile.web
+    #       push: true
+    #       tags: |
+    #         ivucicev/rypm-app:latest
+    #         ivucicev/rypm-app:${{ github.run_id }}
+    #       labels: ${{ steps.meta.outputs.labels }}
 
-      - name: Build and push Web API Docker image
-        if: contains(github.event.head_commit.message, 'ci')
-        id: push-webapi
-        uses: docker/build-push-action@3b5e8027fcad23fda98b2e3ac259d8d67585f671
-        with:
-          context: .
-          file: ./docker/dockerfile.api
-          push: true
-          tags: |
-            ivucicev/rypm-api:latest
-            ivucicev/rypm-api:${{ github.run_id }}
-          labels: ${{ steps.meta.outputs.labels }}
+    #   - name: Build and push Web API Docker image
+    #     if: contains(github.event.head_commit.message, 'ci')
+    #     id: push-webapi
+    #     uses: docker/build-push-action@3b5e8027fcad23fda98b2e3ac259d8d67585f671
+    #     with:
+    #       context: .
+    #       file: ./docker/dockerfile.api
+    #       push: true
+    #       tags: |
+    #         ivucicev/rypm-api:latest
+    #         ivucicev/rypm-api:${{ github.run_id }}
+    #       labels: ${{ steps.meta.outputs.labels }}
 
       - name: Build and push Notification Server Docker image
         if: contains(github.event.head_commit.message, 'ci')
