--- a/docker/dockerfile.notification
+++ b/docker/dockerfile.notification
@@ -9,7 +9,7 @@ ENV PORT=3000
 
 # Install dependencies
 COPY package*.json ./
-RUN npm ci --only=production
+RUN npm ci
 RUN npm run build
 
 # Copy app sources
