--- a/docker/dockerfile.notification
+++ b/docker/dockerfile.notification
@@ -10,6 +10,9 @@ ENV PORT=3000
 # Install dependencies
 COPY ./../notification-server/package*.json ./
 RUN npm install -g typescript
+RUN npm i --save-dev @types/node
+RUN npm i --save-dev @types/express
+RUN npm i --save-dev @types/web-push
 RUN npm install
 
 # Copy app sources
