--- a/notification-server/package.json
+++ b/notification-server/package.json
@@ -16,6 +16,7 @@
     "crypto": "^1.0.1",
     "dotenv": "^17.2.3",
     "express": "^5.1.0",
+    "undici": "^7.21.0",
     "web-push": "^3.6.7"
   },
   "devDependencies": {
